--- a/platform/android/java/AndroidManifest.xml
+++ b/platform/android/java/AndroidManifest.xml
@@ -6,6 +6,7 @@
       android:versionName="1.0"
       android:installLocation="auto"
       >
+
 <supports-screens android:smallScreens="true"
                       android:normalScreens="true"
                       android:largeScreens="true"
@@ -13,7 +14,10 @@
 
 <!--glEsVersion is modified by the exporter, changing this value here has no effect-->
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
-<!--Adding custom text to manifest is fine, but do it outside the custom user and application BEGIN/END regions, as that gets rewritten-->
+
+<!--ARCore meta data. This is modified by the exporter based on whether ARCore is enabled-->
+    <uses-feature android:name="android.hardware.camera.ar" android:required="require_hardware_camera_arcore"/>
+<!--Adding custom text to manifest is fine, but do it outside the custom user and application BEGIN/ENDregions, as that gets rewritten-->
 
 <!--Custom permissions XML added by add-ons. It's recommended to add them from the export preset, though-->
 <!--CHUNK_USER_PERMISSIONS_BEGIN-->
@@ -21,9 +25,11 @@
 
 <!--Anything in this line after the icon will be erased when doing custom build. If you want to add tags manually, do before it.-->
     <application android:label="@string/godot_project_name_string" android:allowBackup="false" tools:ignore="GoogleAppIndexingWarning" android:icon="@drawable/icon">
-
 <!--The following values are replaced when Godot exports, modifying them here has no effect. Do these changes in the-->
 <!--export preset. Adding new ones is fine.-->
+
+<!--ARCore meta data. This is modified by the exporter based on whether ARCore is enabled -->
+        <meta-data android:name="com.google.ar.core" android:value="arcore_required" />
 
 <!-- XR mode metadata. This is modified by the exporter based on the selected xr mode. DO NOT CHANGE the values here. -->
         <meta-data android:name="xr_mode_metadata_name" android:value="xr_mode_metadata_value"/>
@@ -42,6 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     <service android:name="org.godotengine.godot.GodotDownloaderService" />
 
 <!--Custom application XML added by add-ons-->
