--- a/platform/android/java/build.gradle
+++ b/platform/android/java/build.gradle
@@ -30,6 +30,8 @@ allprojects {
 
 dependencies {
 	implementation "com.android.support:support-core-utils:28.0.0"
+//ARCore specific, needs to become options
+	implementation 'com.google.ar:core:1.7.0'
 //CHUNK_DEPENDENCIES_BEGIN
 //CHUNK_DEPENDENCIES_END
 }
